--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,408 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+ *{
+     box-sizing: border-box;
+      border-radius: 5px;
+ }
+
+ body{
+    background: url(/cool-background1.png) center fixed;
+
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     font-family: "Poppins", sans-serif;
+     margin: 0;
+     padding: 0;
+     min-height: 100vh;
+     color: #182956;
+ }
+
+ a{
+    text-decoration: none;
+    transition: .5s;
+}
+
+img{
+   max-width: 100%;
+}
+
+ div.container {
+   background-color: #ffffffc7;
+   box-shadow: 0 0 10px 2px #3333331A;
+   overflow: hidden;
+   min-width: 70%;
+   max-width: 960px;
+   margin-top: 1.5rem;
+   margin-bottom: 1.5rem;
+ }
+ .header .logo{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+ }
+
+ .header .logo a{
+   font-size: 1.5rem;
+ }
+
+
+ .header .logo img{
+   border-radius: 50%;
+   object-fit: cover;
+   height: 250px;
+   width: 250px;
+ }
+
+ .header-menu{
+   background-color: #ffffffc7;
+   min-width: 70%;
+   margin-top: 1.5rem;
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   border: 2px solid #ffffff;
+   box-shadow: 0 0 10px 2px #3333331A;
+   border-radius: 5px;
+   padding: 0.25rem 1rem;
+ }
+
+ @media only screen and (max-width: 1000px) {
+   .header-menu{
+     width: 100%;
+   }
+   .header-container{
+    display: flex;
+    align-items: center;
+    width: 100%;
+   }
+ }
+
+.btn-new{
+  background-color: #4eb195;
+  color: white;
+  padding: 0.25rem  0.5rem;
+}
+
+ .menu{
+   cursor: pointer;
+   display: flex;
+   align-items: center;
+   position: absolute;
+   left: 0px;
+ }
+
+  .menu img{
+   height: 30px;
+   width: 30px;
+ }
+
+.meal-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+ .meals{
+     position: relative;
+     border-radius: 5px;
+     border: 0.5px solid #3333331A;
+     cursor: pointer;
+     width: 400px;
+     margin: 0.8rem;
+     overflow: hidden;
+ }
+
+ .random{
+     position: absolute;
+     top: 2.5rem;
+     background-color: #fff;
+     padding: 0.25rem 1rem;
+     border-top-left-radius: 10px;
+     border-bottom-right-radius: 10px;
+
+ }
+
+ .meal-header img{
+     object-fit: cover;
+     height: 60vh;
+     width: 100%;
+ }
+
+
+.meal-body{
+  display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 1rem;
+}
+
+.meal-body h4{
+    margin: 0;
+    background-color: transparent;
+    font-size: 1.5rem;
+    color: black;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 200px;
+}
+
+//show
+.meal{
+    position: relative;
+    border-radius: 5px;
+    border: 0.5px solid #3333331A;
+    cursor: pointer;
+    margin: 0.8rem;
+    overflow: hidden;
+}
+
+//favorites
+.fav-container{
+    border: 1px solid #3333331A;
+    color: black;
+    padding: 0.5rem 1rem;
+}
+.fav-container a{
+    color: black;
+}
+
+.fav-container h3{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+.fav-meals{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+}
+
+.fav-meals li {
+    cursor: pointer;
+    position: relative;
+    width: 75px;
+    margin: 5px;
+}
+
+
+.fav-meals li img{
+    border: 2px solid #ffffff;
+    box-shadow: 0 0 10px 2px #3333331A;
+    border-radius: 50%;
+    object-fit: cover;
+    height: 70px;
+    width: 70px;
+}
+
+.fav-meals li span{
+    display: inline-block;
+    font-size: 0.9rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 75px;
+}
+
+.fav-meals li  .clear{
+    background-color: transparent;
+    border: none;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
+
+.fav-meals li:hover  .clear{
+    opacity: 1;
+}
+
+.meal-body .fav-btn{
+    border: none;
+    background-color: transparent;
+    color: gray;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
+.meal-body .fav-btn.active{
+   color: rebeccapurple;
+}
+
+.recette_img h4{
+  margin: 0;
+  background-color: transparent;
+  font-size: 1.5rem;
+  color: black;
+  text-align: center
+}
+
+.owner_name{
+  text-align: center;
+}
+
+div.separateur {
+    width: 100px;
+    height: 1px;
+    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+//show
+div.colonne {
+    width: 100%;
+    margin-top: 20px;
+}
+
+div.colonne h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+    border-bottom: 5px solid #6C829D;
+    padding-bottom: 5px;
+}
+
+div.colonne1 {
+    display: inline-block;
+}
+
+div.ingredients p {
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid lightgray;
+    padding: 8px 0px;
+    margin-top: 4px;
+    margin-bottom: 0;
+}
+
+table.preparation p.numero {
+    background-color: #6C829D;
+    color: white;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 4px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    margin: 0;
+}
+
+table.preparation td {
+    vertical-align: top;
+}
+
+table.preparation td.preparation_etape {
+    font-size: 14px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+table.preparation tr {
+    height: 40px;
+}
+/* Styles pour ordinateur */
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
+
+    table.info {
+        height: 80px
+    }
+
+    table.info td {
+        font-size: 14px;
+    }
+
+    table.info th {
+        font-size: 16px;
+    }
+
+    div.colonne {
+        width: 45%;
+    }
+
+    div.colonne1 {
+        margin-right: 10%;
+    }
+
+    div.colonne2 {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    div.contenu {
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
+}
+
+.fa-youtube{
+  color: red;
+  font-size: 2rem;
+}
+//form
+.form {
+  margin: 0 auto;
+  width: 100%;
+  margin: 0;
+  padding: 1.5rem;
+  background-color:#ffffffc7;
+}
+
+
+.form form input{
+  padding: 10px;
+  border: 0.5px solid #182956ab;
+  background: transparent;
+  width: 100%;
+}
+
+.form form textarea{
+  padding: 10px;
+  border: 0.5px solid #182956ab;
+  background: transparent;
+  width: 100%;
+  min-height: 20vh;
+}
+
+.form form input[type="submit"]:hover{
+  background: #182956ab;
+}
+
+
+.fa-feather-alt, .fa-trash{
+  font-size: 1.2rem;
+  padding:  0.5rem;
+  margin: 0.5rem;
+  border: 0.5px solid #b37d77;
+}
+
+.origin{
+  text-align: center;
+  font-size: 0.8rem;
+}
