--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 <td><%= link_to ' AJOUTEZ UN TWEET ', new_post_path %></td>
 </tr>
 </table>
-<table >
+<table class =  >
     <% @post.each do |t| %>
         <tr>
             <td><%= t.contenu %></td>
