--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,21 +38,11 @@
  a{
     text-decoration: none;
     transition: .5s;
+    display:block;
+    text-align:center;
 }
 
-img{
-   max-width: 100%;
-}
 
- div.container {
-   background-color: #ffffffc7;
-   box-shadow: 0 0 10px 2px #3333331A;
-   overflow: hidden;
-   min-width: 70%;
-   max-width: 960px;
-   margin-top: 1.5rem;
-   margin-bottom: 1.5rem;
- }
  .header .logo{
    display: flex;
    flex-direction: column;
@@ -98,187 +88,13 @@ img{
  }
 
 .btn-new{
-  background-color: #4eb195;
+  background-color:orange;
   color: white;
   padding: 0.25rem  0.5rem;
+  align-content: center;
 }
 
- .menu{
-   cursor: pointer;
-   display: flex;
-   align-items: center;
-   position: absolute;
-   left: 0px;
- }
-
-  .menu img{
-   height: 30px;
-   width: 30px;
- }
-
-.meal-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-
- .meals{
-     position: relative;
-     border-radius: 5px;
-     border: 0.5px solid #3333331A;
-     cursor: pointer;
-     width: 400px;
-     margin: 0.8rem;
-     overflow: hidden;
- }
-
- .random{
-     position: absolute;
-     top: 2.5rem;
-     background-color: #fff;
-     padding: 0.25rem 1rem;
-     border-top-left-radius: 10px;
-     border-bottom-right-radius: 10px;
-
- }
-
- .meal-header img{
-     object-fit: cover;
-     height: 60vh;
-     width: 100%;
- }
-
-
-.meal-body{
-  display: flex;
-   align-items: center;
-   justify-content: space-between;
-   padding: 1rem;
-}
-
-.meal-body h4{
-    margin: 0;
-    background-color: transparent;
-    font-size: 1.5rem;
-    color: black;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 200px;
-}
-
-//show
-.meal{
-    position: relative;
-    border-radius: 5px;
-    border: 0.5px solid #3333331A;
-    cursor: pointer;
-    margin: 0.8rem;
-    overflow: hidden;
-}
-
-//favorites
-.fav-container{
-    border: 1px solid #3333331A;
-    color: black;
-    padding: 0.5rem 1rem;
-}
-.fav-container a{
-    color: black;
-}
-
-.fav-container h3{
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-.fav-meals{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;
-}
-
-.fav-meals li {
-    cursor: pointer;
-    position: relative;
-    width: 75px;
-    margin: 5px;
-}
-
-
-.fav-meals li img{
-    border: 2px solid #ffffff;
-    box-shadow: 0 0 10px 2px #3333331A;
-    border-radius: 50%;
-    object-fit: cover;
-    height: 70px;
-    width: 70px;
-}
-
-.fav-meals li span{
-    display: inline-block;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 75px;
-}
-
-.fav-meals li  .clear{
-    background-color: transparent;
-    border: none;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-}
-
-.fav-meals li:hover  .clear{
-    opacity: 1;
-}
-
-.meal-body .fav-btn{
-    border: none;
-    background-color: transparent;
-    color: gray;
-    cursor: pointer;
-    font-size: 1.2rem;
-}
-
-.meal-body .fav-btn.active{
-   color: rebeccapurple;
-}
-
-.recette_img h4{
-  margin: 0;
-  background-color: transparent;
-  font-size: 1.5rem;
-  color: black;
-  text-align: center
-}
-
-.owner_name{
-  text-align: center;
-}
-
-div.separateur {
-    width: 100px;
-    height: 1px;
-    background-color: black;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-//show
+ //show
 div.colonne {
     width: 100%;
     margin-top: 20px;
@@ -373,10 +189,8 @@ table.preparation tr {
     }
 }
 
-.fa-youtube{
-  color: red;
-  font-size: 2rem;
-}
+
+ 
 //form
 .form {
   margin: 0 auto;
@@ -417,4 +231,23 @@ table.preparation tr {
 .origin{
   text-align: center;
   font-size: 0.8rem;
+}
+.container{
+  width: 980px;
+  margin:0 auto;
+  min-height: 100%;
+  position : relative;
+}
+.header {
+  background-color:beige;
+  height:50px;
+  font-size: 1.5rem;
+}
+.footer{
+  background-color:beige;
+  height: 50px;
+  width: 100%;
+  bottom:0;
+  display : table;
+  position:relative;
 }
